# search-quest

./: prd.md  pyproject.toml
src/product_search/: README.md  manage.py  requirements.txt
src/product_search/product_search/: asgi.py  settings.py  urls.py  wsgi.py
src/product_search/products/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
src/product_search/products/management/commands/: generate_fake_data_from_csv.py
src/product_search/products/management/commands/assets/: translation_model.py
src/product_search/products/management/commands/assets/Dataset/whatsappRates/: volume tiers.csv
src/product_search/products/migrations/: 0001_initial.py  0002_index_search_vectors_trigrams.py  0003_product_nutrition_facts.py
