[project]
name = "search-quest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argostranslate>=1.9.6",
    "coreapi>=2.3.3",
    "django>=5.2.1",
    "django-restframework>=0.0.1",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "faker>=37.3.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
]
